# BIDA-ML-Starter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-snowflake.txt
configs/: config.yaml
notebooks/: 00_environment_check.ipynb  01_data_exploration.ipynb  02_forecasting.ipynb  03_classification.ipynb  04_regression.ipynb
skills/: CLASSIFICATION_SKILL.md  FORECASTING_SKILL.md  REGRESSION_SKILL.md
sql/: 01_admin_setup.sql  02_create_sample_data.sql  03_snowflake_forecast.sql
src/: __init__.py  config.py  data_loader.py
tests/: test_config.py
